# aiidalab-acwf

./: .gitignore  README.md  acwf.ipynb  calculation_history.ipynb  delete.ipynb  download.ipynb  proposed-shape.py  pyproject.toml  qe-example.py  setup.cfg  start.py
src/aiidalab_acwf/: __init__.py  utils.py
src/aiidalab_acwf/app/: __init__.py  app.py  main.py  model.py
src/aiidalab_acwf/app/configuration/: model.py  step.py
src/aiidalab_acwf/app/configuration/common/: __init__.py  common.py  model.py  panel.py
src/aiidalab_acwf/app/resources/: __init__.py  common.py  model.py  step.py
src/aiidalab_acwf/app/resources/common/: __init__.py  model.py  panel.py
src/aiidalab_acwf/app/resources/common_settings/: model.py  panel.py
src/aiidalab_acwf/app/result/: model.py  step.py
src/aiidalab_acwf/app/result/components/: __init__.py
src/aiidalab_acwf/app/result/components/status/: model.py  status.py
src/aiidalab_acwf/app/result/components/summary/: download_data.py  model.py  outputs.py  schema.json  summary.py
src/aiidalab_acwf/app/result/components/viewer/: model.py  viewer.py
src/aiidalab_acwf/app/result/components/viewer/structure/: model.py  results.py
src/aiidalab_acwf/app/static/css/: acwf.css  custom.css
src/aiidalab_acwf/app/static/styles/: acwf.css  afm.css  custom.css  infobox.css
src/aiidalab_acwf/app/static/templates/: about.jinja  guide.jinja
src/aiidalab_acwf/app/structure/: model.py  step.py
src/aiidalab_acwf/app/submission/: model.py  step.py
src/aiidalab_acwf/app/submission/global_settings/: __init__.py  model.py  panel.py
src/aiidalab_acwf/app/wizard/: model.py  wizard.py
src/aiidalab_acwf/common/: calculation_history.py  guide_manager.py  infobox.py  mixins.py  panel.py  widgets.py  wizard.py
src/aiidalab_acwf/common/code/: model.py
src/aiidalab_acwf/guides/: 0_Basic tutorial (relaxation).html  0_Common relaxation workflow.html
src/aiidalab_acwf/parameters/: __init__.py  defaults.yaml
src/aiidalab_acwf/plugins/: utils.py
src/aiidalab_acwf/plugins/afm/: __init__.py  resources.py  result.py  workflow.py
src/aiidalab_acwf/plugins/afm/configuration/: __init__.py  model.py  panel.py  settings.py
src/aiidalab_acwf/plugins/afm/guides/: 0_AFM empirical mode.html
src/aiidalab_acwf/plugins/afm/resources/: __init__.py  model.py  panel.py  resources.py
src/aiidalab_acwf/plugins/afm/result/: __init__.py  model.py  panel.py
src/aiidalab_acwf/plugins/afm/results/: model.py  panel.py
src/aiidalab_acwf/workflows/: __init__.py  workflow.py
