[metadata]
name = aiidalab_acwf
version = 0.0.1
description = Package for the AiiDAlab ACWF app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edan-bainglass/aiidalab-acwf
author = Edan Bainglass
author_email = edan.bainglass@psi.ch
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker = https://github.com/edan-bainglass/aiidalab-acwf/issues

[options]
package_dir =
    = src
packages = find:
install_requires =
    aiida-core~=2.7,<3
    aiidalab-widgets-base~=2.5.0
    aiida-quantumespresso @ git+https://github.com/edan-bainglass/aiida-quantumespresso.git@pp-workchain

python_requires = >=3.9

[options.packages.find]
where = src

[options.extras_require]
dev =
    bumpver~=2023.1124
    pre-commit~=3.2
    pytest~=7.4
    pytest-regressions~=2.2
    pgtest==1.3.1
    pytest-cov~=5.0

afm =
    ppafm==0.4.0
    aiida-common-workflows @ git+https://github.com/edan-bainglass/aiida-common-workflows.git@afm
    aiida-workgraph @ git+https://github.com/edan-bainglass/aiida-workgraph.git@premise-demo

[options.package_data]
aiidalab_acwf.app.static.images = *
aiidalab_acwf.app.static.styles = *.css
aiidalab_acwf.app.static.templates = *.jinja
aiidalab_acwf.app.result.components.summary = schema.json
aiidalab_acwf.common.link_button = static/*
aiidalab_acwf.guides = *.html
aiidalab_acwf.parameters = defaults.yaml
aiidalab_acwf.plugins.afm.guides = *.html

[options.entry_points]
aiidalab_acwf =
    afm = aiidalab_acwf.plugins.afm:afm

[aiidalab]
title = AiiDA Common Workflows (ACWF)
description = The AiiDA common workflows (ACWF) project provides computational workflows, implemented in AiiDA, to compute various material properties in a uniform interface independent of any specific quantum simulation engine.
categories =
    quantum
    common
